--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,119 @@ matplotlib
 pandas 
 lpips
 
-streamlit
+streamlitabsl-py==1.4.0
+aiohttp==3.8.4
+aiosignal==1.3.1
+altair==4.2.2
+async-timeout==4.0.2
+attrs==23.1.0
+blinker==1.6.2
+cachetools==5.3.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
+click==8.1.3
+cmake==3.26.3
+colorama==0.4.6
+contourpy==1.0.7
+cycler==0.11.0
+decorator==5.1.1
+Deprecated==1.2.13
+einops==0.6.1
+entrypoints==0.4
+filelock==3.12.0
+fonttools==4.39.3
+frozenlist==1.3.3
+fsspec==2023.4.0
+gitdb==4.0.10
+GitPython==3.1.31
+google-auth==2.17.3
+google-auth-oauthlib==1.0.0
+grpcio==1.54.0
+humanize==4.6.0
+idna==3.4
+importlib-metadata==6.6.0
+Jinja2==3.1.2
+jsonschema==4.17.3
+kiwisolver==1.4.4
+lightning-utilities==0.8.0
+lit==16.0.2
+lpips==0.1.4
+Markdown==3.4.3
+markdown-it-py==2.2.0
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+mdurl==0.1.2
+-e git+ssh://git@github.com/bokunopica/medfusion.git@8090066a32cd7ef38995390693d06c63bb2f0ac8#egg=Medical_Diffusion
+monai==1.1.0
+mpmath==1.3.0
+multidict==6.0.4
+networkx==3.1
+nibabel==5.1.0
+numpy==1.24.3
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+oauthlib==3.2.2
+packaging==23.1
+pandas==2.0.1
+Pillow==9.5.0
+protobuf==3.20.3
+pyarrow==12.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pydeck==0.8.1b0
+pyDeprecate==0.3.2
+Pygments==2.15.1
+Pympler==1.0.1
+pyparsing==3.0.9
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+pytorch-lightning==1.7.7
+pytorch-msssim==0.2.1
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
+requests==2.30.0
+requests-oauthlib==1.3.1
+rich==13.3.5
+rsa==4.9
+scipy==1.10.1
+shellingham==1.5.0.post1
+SimpleITK==2.2.1
+six==1.16.0
+sklearn==0.0.post4
+smmap==5.0.0
+streamlit==1.22.0
+sympy==1.11.1
+tenacity==8.2.2
+tensorboard==2.13.0
+tensorboard-data-server==0.7.0
+toml==0.10.2
+toolz==0.12.0
+torch==2.0.0
+torch-fidelity==0.3.0
+torchio==0.18.91
+torchmetrics==0.11.4
+torchvision==0.15.1
+tornado==6.3.1
+tqdm==4.65.0
+triton==2.0.0
+typer==0.9.0
+typing_extensions==4.5.0
+tzdata==2023.3
+tzlocal==4.3
+urllib3==2.0.2
+validators==0.20.0
+watchdog==3.0.0
+Werkzeug==2.3.3
+wrapt==1.15.0
+yarl==1.9.2
+zipp==3.15.0
