package version fix

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-torch # pip install torch --extra-index-url https://download.pytorch.org/whl/cu113
+torch==1.11.0 # pip install torch --extra-index-url https://download.pytorch.org/whl/cu113
+torchaudio==0.11.0
 numpy 
 sklearn
-pytorch-lightning
+pytorch-lightning==1.6.5
 pytorch_msssim
 monai
 torchmetrics
@@ -9,7 +10,7 @@ torch-fidelity
 torchio 
 pillow
 einops
-torchvision
+torchvision==0.12.0
 matplotlib
 pandas 
 lpips
